testsuite/tests/properties/invalid_lambda_arg_type/find_no_index/test.lkt
from common import BaseExampleBlock, Example, FooNode, IndexedItem

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Entity[Example] =
        node.items.find((e: Int) => e != 0)
}
